[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trip-planner"
version = "0.0.1"
description = "AI Trip Planner app"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_trip_planner*"]
